--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,160 @@ engine: ejs
 current: index
 ---
 
-<h1>
-  這是一段話
-</h1>
-
-<div class="box"></div>
+<header class="banner d-flex justify-content-center align-items-center">
+  <div class="banner-content text-white">
+    <h1 class="lh-3">Here’s <br /><span class="h1">JOANNE</span></h1>
+    <p class="mt-7 lh-3">Founder of “XXXD Official’’<br />& Graphic Designer</p>
+    <ul class="d-flex justify-content-between mt-9">
+      <li>
+        <a href="#"
+          ><img
+            src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/102c91f7b3d8e08005073f54b3283b09a18dc427/week2/behance.svg"
+            alt="behance"
+        /></a>
+      </li>
+      <li>
+        <a href="#"
+          ><img
+            src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/102c91f7b3d8e08005073f54b3283b09a18dc427/week2/facebook.svg"
+            alt="facebook"
+        /></a>
+      </li>
+      <li>
+        <a href="#"
+          ><img
+            src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/102c91f7b3d8e08005073f54b3283b09a18dc427/week2/instagram.svg"
+            alt="instagram"
+        /></a>
+      </li>
+      <li>
+        <a href="#"
+          ><img
+            src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/102c91f7b3d8e08005073f54b3283b09a18dc427/week2/youtube.svg"
+            alt="youtube"
+        /></a>
+      </li>
+    </ul>
+  </div>
+</header>
+<main>
+  <div class="about text-center">
+    <h2 class="h2">About</h2>
+    <img
+      class="mt-9 mx-auto"
+      src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week2/photo.png?raw=true"
+      alt="Joanne_Chen"
+    />
+    <ul>
+      <li class="mt-4">Joanne Chen</li>
+      <li class="mt-2">1997/10/10</li>
+      <li class="lh-3 text-center mt-3">
+        National Hex School Normal University <br />Department of Visual Design
+      </li>
+    </ul>
+    <ul class="d-flex flex-column align-items-center list-styled">
+      <li>Founder of ‘’XXXD Official’’</li>
+      <li class="mt-6">Graphic Designer</li>
+      <li class="mt-6">Graphic Intern of Hex School</li>
+    </ul>
+  </div>
+  <div class="brand bg-dark">
+    <div class="container text-center">
+      <h2 class="h2">My Brand ‘’XXXD’’</h2>
+      <p class="mt-2">Just Keep XXXD Everyday</p>
+      <p class="lh-3 mt-7">
+        2020 年創立的個人服飾品牌 <br />引領叛逆少年開啟與社會對話的窗口
+        <br />主打概念潮流T-Shirt
+      </p>
+      <ul class="d-flex flex-wrap justify-content-center mt-13">
+        <li>
+          <img
+            src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week2/brand_img1.png?raw=true"
+            alt="brand1"
+          />
+        </li>
+        <li class="mt-9 mr-5">
+          <img
+            src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week2/brand_img2.png?raw=true"
+            alt="brand2"
+          />
+        </li>
+        <li class="mt-9">
+          <img
+            src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week2/brand_img3.png?raw=true"
+            alt="brand3"
+          />
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="otherWorks text-center">
+    <h2 class="h2">Other Works</h2>
+    <p class="mt-3 lh-3">2016-2020 年累積的作品 <br />海報/廣告/攝影/LOGO/3D</p>
+    <ul class="container d-flex flex-wrap justify-content-between mt-7">
+      <li>
+        <img
+          src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week2/work_img1.png?raw=true"
+          alt="work_img1"
+        />
+        <p class="fs-small mt-3">海報設計/2017</p>
+      </li>
+      <li>
+        <img
+          src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week2/work_img2.png?raw=true"
+          alt="work_img2"
+        />
+        <p class="fs-smalll mt-3">海報設計/2018</p>
+      </li>
+      <li>
+        <img
+          src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week2/work_img3.png?raw=true"
+          alt="work_img3"
+        />
+        <p class="fs-smalll mt-3">海報設計/2018</p>
+      </li>
+      <li class="mt-11">
+        <img
+          src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week2/work_img4.png?raw=true"
+          alt="work_img4"
+        />
+        <p class="fs-small mt-3">概念攝影/2018</p>
+      </li>
+      <li class="mt-11">
+        <img
+          src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week2/work_img5.png?raw=true"
+          alt="work_img5"
+        />
+        <p class="fs-small mt-3">概念攝影/2018</p>
+      </li>
+      <li class="mt-11">
+        <img
+          src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week2/work_img6.png?raw=true"
+          alt="work_img6"
+        />
+        <p class="fs-small mt-3">sasa 酒標設計/2019</p>
+      </li>
+      <li class="mt-11">
+        <img
+          src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week2/work_img7.png?raw=true"
+          alt="work_img7"
+        />
+        <p class="fs-small mt-3">攝影創作/2018</p>
+      </li>
+      <li class="mt-11">
+        <img
+          src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week2/work_img8.png?raw=true"
+          alt="work_img8"
+        />
+        <p class="fs-small mt-3">官網設計/2020</p>
+      </li>
+    </ul>
+  </div>
+</main>
+<footer class="text-center bg-dark text-center">
+  <h2 class="h2">Contact</h2>
+  <ul class="mt-3">
+    <li>Mail：<a href="mailto:xxxd@hexschool.com">xxxd@hexschool.com</a></li>
+    <li class="mt-5">Phone Number：<a href="tel:0910123456">0910123456</a></li>
+  </ul>
+</footer>
