--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@ current: index
 <main>
   <div class="banner px-5">
     <div class="container h-100 d-flex jc-end ai-center text-right">
-      <h2 class="banner-content fs-5 text-primary mx-5">
+      <h2 class="banner-content fs-5 text-primary">
         Promise-Desert 2020 早春系列<br /><span class="h1">看得清，才能看得遠</span>
       </h2>
     </div>
